--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Meu primeiro site estático no GitHub Page</h1>
+    <h1>Meu segundo teste no GitHub Pages</h1>
     <p>Funciona e atualiza em segundos.</p>
 </body>
 </html>
