--- a/index.html
+++ b/index.html
@@ -1,12 +1,99 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Meu primeiro site no GitHub</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nivaldo Junior – Psicólogo</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: #f3f5f7;
+            margin: 0;
+            padding: 0;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        header {
+            text-align: center;
+            padding: 40px 20px;
+            background-color: #ffffff;
+            border-bottom: 1px solid #ddd;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2.4rem;
+            color: #222;
+        }
+
+        header h2 {
+            margin-top: 10px;
+            font-weight: normal;
+            font-size: 1.2rem;
+            color: #666;
+        }
+
+        .foto-perfil {
+            width: 160px;
+            height: 160px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-top: 20px;
+            border: 3px solid #eee;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 40px auto;
+            padding: 20px;
+        }
+
+        .card {
+            background: white;
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+        }
+
+        h3 {
+            margin-top: 0;
+            color: #333;
+        }
+    </style>
 </head>
 <body>
-    <h1>Meu segundo teste no GitHub Pages</h1>
-    <p>Funciona e atualiza em segundos.</p>
+
+<header>
+    <img src="https://via.placeholder.com/200" class="foto-perfil" alt="Foto de perfil">
+    <h1>Nivaldo Junior</h1>
+    <h2>Psicólogo • Atendimento Online para Brasileiros na Europa</h2>
+</header>
+
+<div class="container">
+    <div class="card">
+        <h3>Sobre meu trabalho</h3>
+        <p>
+            Sou psicólogo e trabalho com uma abordagem séria, centrada na escuta e na compreensão
+            profunda da experiência humana. Atendo brasileiros que vivem na Europa e buscam
+            acolhimento, estabilidade emocional e espaço para reflexão.
+        </p>
+
+        <p>
+            Minha prática clínica é baseada em fundamentos da psicanálise, focando na singularidade
+            de cada sujeito, no fortalecimento da autonomia e na elaboração de conflitos internos.
+        </p>
+
+        <h3>Agende uma consulta</h3>
+        <p>
+            Atendo de forma totalmente online.  
+            Entre em contato para marcar sua primeira sessão:
+        </p>
+
+        <p><strong>Email:</strong> seuemail@exemplo.com</p>
+        <p><strong>WhatsApp:</strong> +55 00 00000-0000</p>
+    </div>
+</div>
+
 </body>
 </html>
