--- a/nivaldojunior.html
+++ b/nivaldojunior.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nivaldo Júnior | Psicólogo</title>
-  <meta name="description" content="Site profissional do psicólogo Nivaldo Junior. Atendimento online e presencial. Especialista em [sua abordagem]">
+  <meta name="description" content="Site profissional do psicólogo Nivaldo Júnior. Atendimento online e presencial. Especialista em [sua abordagem]">
   <style>
     body {
       margin: 0;
