--- a/nivaldojunior.html
+++ b/nivaldojunior.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nivaldo Júnior | Psicólogo</title>
-  <meta name="description" content="Site profissional do psicólogo Nivaldo Júnior. Atendimento online e presencial. Especialista em [sua abordagem]">
+  <meta name="description" content="Site profissional do psicólogo Nivaldo Júnior. Atendimento online e presencial. Especialista em Psicolinguística">
   <style>
     body {
       margin: 0;
@@ -58,16 +58,16 @@
 </head>
 <body>
   <header>
-    <h1>Nivaldo Junior</h1>
+    <h1>Nivaldo Júnior</h1>
     <p>Psicólogo clínico | Atendimento online e presencial</p>
   </header>
 
   <div class="container">
-    <img src="https://via.placeholder.com/700x400.png?text=Imagem+Profissional" alt="Foto profissional de Nivaldo Junior" class="hero-image">
+    <img src="https://via.placeholder.com/700x400.png?text=Imagem+Profissional" alt="Foto profissional de Nivaldo Júnior" class="hero-image">
 
     <h2>Bem-vindo ao meu site</h2>
     <p>
-      Olá, sou o <strong>Nivaldo Junior</strong>, psicólogo dedicado a ajudar pessoas a encontrarem equilíbrio emocional, sentido e bem-estar. Trabalho com abordagens como [coloque aqui sua abordagem principal ou especialidade], oferecendo um espaço seguro e acolhedor para terapia.
+      Olá, sou o <strong>Nivaldo Júnior</strong>, psicólogo dedicado a ajudar pessoas a encontrarem equilíbrio emocional, sentido e bem-estar. Trabalho com abordagens como Psicanálise e Psicolinguística, oferecendo um espaço seguro e acolhedor para terapia.
     </p>
 
     <h2>O que faço</h2>
@@ -87,7 +87,7 @@
   </div>
 
   <footer>
-    &copy; 2025 Nivaldo Junior. Todos os direitos reservados.
+    &copy; 2025 Nivaldo Júnior. Todos os direitos reservados.
   </footer>
 </body>
 </html>
