--- a/teste.html
+++ b/teste.html
@@ -65,7 +65,7 @@
 <body>
 
 <header>
-    <img src="https://via.placeholder.com/200" class="foto-perfil" alt="Foto de perfil">
+    <img src="nivaldo.jpg" class="foto-perfil" alt="Foto de perfil">
     <h1>Nivaldo Júnior</h1>
     <h2>Psicólogo • Atendimento Online para Brasileiros na Europa</h2>
 </header>
