--- a/nivaldojunior.html
+++ b/nivaldojunior.html
@@ -60,7 +60,7 @@
   <header>
     <h1>Nivaldo Júnior</h1>
     <p>Psicólogo clínico | Atendimento online e presencial</p>
-    <img src="https://github.com/nivaldojuniorpsi/teste/blob/22f3f57829990388da2ed597f33ac06247f96e6b/nivaldo.jpg"
+        <img src="nivaldo.jpg"
         alt="Minha foto"
         class=hero-image">
   </header>
