--- a/nivaldojunior.html
+++ b/nivaldojunior.html
@@ -61,6 +61,11 @@
     <h1>Nivaldo Júnior</h1>
     <p>Psicólogo clínico | Atendimento online e presencial</p>
         <img src="nivaldo.jpg"
+         style="display:block;
+        margin:20px auto;
+        max-width:100%;
+        height:auto;
+">
         alt="Minha foto"
         class=hero-image">
   </header>
