--- a/nivaldojunior.html
+++ b/nivaldojunior.html
@@ -70,7 +70,7 @@
   </header>
 
   <div class="container">
-    <img src="https://via.placeholder.com/700x400.png?text=Imagem+Profissional" alt="Foto profissional de Nivaldo Júnior" class="hero-image">
+    <img src="logo.png" alt="Nivaldo José da Cunha Júnior" class="hero-image">
 
     <h2>Bem-vindo ao meu site</h2>
     <p> {
