--- a/nivaldojunior.html
+++ b/nivaldojunior.html
@@ -63,20 +63,19 @@
         <img src="nivaldo.jpg"
          style="display:block;
         margin:20px auto;
-        max-width:100%;
+        max-width:auto;
         height:auto;
-        class=hero-image
-        alt="CRP 09/016675">
+        class= hero-image
+        alt="CRP 09-016675">
   </header>
 
   <div class="container">
     <img src="logo.png" alt="Nivaldo José da Cunha Júnior" class="hero-image">
 
     <h2>Bem-vindo ao meu site</h2>
-    <p> {
-      text-align:justify;
+    <p>
+      <text-align:justify;>
       Olá, sou o <strong>Nivaldo Júnior</strong>, psicólogo dedicado a ajudar pessoas a encontrarem equilíbrio emocional, sentido e bem-estar. Trabalho com abordagens como Psicanálise e Psicolinguística, oferecendo um espaço seguro e acolhedor para terapia.
-    }
     </p>
 
     <h2>O que faço</h2>
