--- a/nivaldojunior.html
+++ b/nivaldojunior.html
@@ -35,7 +35,7 @@
     }
     .hero-image {
       display: block;
-      max-width: 100%;
+      max-width: auto;
       height: auto;
       margin: 20px auto;
       border-radius: 8px;
