--- a/nivaldojunior.html
+++ b/nivaldojunior.html
@@ -74,8 +74,9 @@
 
     <h2>Bem-vindo ao meu site</h2>
     <p>
-      <text-align:justify;>
+      <text-align:justify;
       Olá, sou o <strong>Nivaldo Júnior</strong>, psicólogo dedicado a ajudar pessoas a encontrarem equilíbrio emocional, sentido e bem-estar. Trabalho com abordagens como Psicanálise e Psicolinguística, oferecendo um espaço seguro e acolhedor para terapia.
+    >
     </p>
 
     <h2>O que faço</h2>
