--- a/teste.html
+++ b/teste.html
@@ -81,6 +81,7 @@
         </p>
 
         <p>
+                         <text-align:justify;>
             Minha prática clínica é baseada em fundamentos da psicanálise, focando na singularidade
             de cada sujeito, no fortalecimento da autonomia e na elaboração de conflitos internos.
         </p>
