--- a/teste.html
+++ b/teste.html
@@ -73,15 +73,13 @@
 <div class="container">
     <div class="card">
         <h3>Sobre meu trabalho</h3>
-        <p>
-             <text-align:justify;>
+        <p style="text-align: justify;">
             Sou psicólogo e trabalho com uma abordagem séria, centrada na escuta e na compreensão
             profunda da experiência humana. Atendo brasileiros que vivem na Europa e buscam
             acolhimento, estabilidade emocional e espaço para reflexão.
         </p>
 
-        <p>
-                         <text-align:justify;>
+        <p style="text-align: justify;">
             Minha prática clínica é baseada em fundamentos da psicanálise, focando na singularidade
             de cada sujeito, no fortalecimento da autonomia e na elaboração de conflitos internos.
         </p>
