--- a/nivaldojunior.html
+++ b/nivaldojunior.html
@@ -61,12 +61,15 @@
     <h1>Nivaldo Júnior</h1>
     <p>Psicólogo clínico | Atendimento online e presencial</p>
         <img src="nivaldo.jpg"
-         style="display:block;
-        margin:20px auto;
-        max-width:auto;
-        height:auto;
-        class= hero-image
-        alt="CRP 09-016675">
+     class="hero-image"
+     alt="CRP 09-016675"
+     style="
+         display: block;
+         margin: 20px auto;
+         width: 100%; /* Permite que ocupe toda a largura disponível */
+         max-width: 600px; /* Limita o tamanho MÁXIMO da imagem no desktop a 600 pixels */
+         height: auto;
+     ">
   </header>
 
   <div class="container">
