--- a/nivaldojunior.html
+++ b/nivaldojunior.html
@@ -62,8 +62,8 @@
     <button id="btnMenu" class="menu-hamburguer">☰</button>
     
     <nav id="menuLinks" class="menu-principal">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
+        <a href="#">Sobre mim</a>
+        <a href="#">Textos/Blog</a>
         <a href="#">Link 3</a>
     </nav>
 
