--- a/nivaldojunior.html
+++ b/nivaldojunior.html
@@ -82,7 +82,14 @@
   </header>
 
   <div class="container">
-    <img src="logo.png" alt="Nivaldo José da Cunha Júnior" class="hero-image">
+    <img src="logo.png" alt="Nivaldo José da Cunha Júnior" class="hero-image"
+      style="
+      display: block;
+      margin: 20px auto;
+         width: 100%;
+         max-width: 600px;
+         height: auto;
+     ">
 
     <h2>Bem-vindo ao meu site</h2>
     <p style="text-align: justify;">
