--- a/home.html
+++ b/home.html
@@ -155,7 +155,7 @@
         <button id="btnMenu" class="menu-hamburguer">☰</button>
         
         <nav id="menuLinks" class="menu-principal">
-    <a href="https://nivaldojuniorpsi.github.io/teste/blog.html">Blog</a>
+    <a href="https://nivaldojuniorpsi.github.io/home/blog.html">Blog</a>
     <a href="https://nivaldojuniorpsi.github.io/home/sobre.html">Sobre</a>
     <a href="#">Contatos</a>
         </nav>
