--- a/sobre.html
+++ b/sobre.html
@@ -84,11 +84,11 @@
             
             <!-- Menu Principal (Desktop) -->
             <nav class="hidden md:flex space-x-4">
-                <a href="index.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-white hover:text-[#2a4d69] transition duration-150">Home</a>
+                <a href="https://nivaldojuniorpsi.github.io/home/home.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-white hover:text-[#2a4d69] transition duration-150">Home</a>
                 <!-- Link Absoluto para o Blog -->
-                <a href="https://nivaldojuniorpsi.github.io/teste/blog.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-white hover:text-[#2a4d69] transition duration-150">Blog</a>
+                <a href="https://nivaldojuniorpsi.github.io/home/blog.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-white hover:text-[#2a4d69] transition duration-150">Blog</a>
                 <!-- Link Ativo para a própria página 'Sobre' -->
-                <a href="sobre.html" class="px-3 py-2 rounded-md text-sm font-medium bg-[#4A80A4] text-white">Sobre</a>
+                <a href="https://nivaldojuniorpsi.github.io/home/sobre.html" class="px-3 py-2 rounded-md text-sm font-medium bg-[#4A80A4] text-white">Sobre</a>
                 <a href="#" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-white hover:text-[#2a4d69] transition duration-150">Contatos</a>
             </nav>
 
