--- a/blog.html
+++ b/blog.html
@@ -53,7 +53,7 @@
         
         <!-- Título da Seção -->
         <h2 class="text-3xl font-extrabold text-[#2a4d69] mb-8 px-4 sm:px-0">
-            Artigos e Reflexões sobre Psicolinguística
+            Artigos e Reflexões sobre Psicologia, Psicanálise e Psicolinguística
         </h2>
 
         <!-- GRADE DE ARTIGOS -->
