--- a/blog.html
+++ b/blog.html
@@ -61,14 +61,14 @@
 
             <!-- Card de Artigo 1 -->
             <article class="bg-white rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden border border-gray-100">
-                <img class="w-full h-48 object-cover" src="iceberg.png" alt="Imagem de um iceberg representado a parte submersa do inconsciente">
+                <img class="w-full h-48 object-cover" src="img/iceberg.png" alt="Imagem de um iceberg representado a parte submersa do inconsciente">
                 <div class="p-6">
                     <p class="text-sm text-gray-500 mb-2">26 de Novembro, 2025</p>
                     <h3 class="text-xl font-semibold text-gray-900 mb-3">O Inconsciente e a Linguagem: Pontos de Convergência</h3>
                     <p class="text-gray-600 line-clamp-3 mb-4">
                         Exploramos como a estrutura da linguagem, segundo Lacan, é fundamental para a compreensão dos mecanismos do inconsciente.
                     </p>
-                    <a href="https://nivaldojuniorpsi.github.io/home/o-inconsciente-e-a-linguagem.html" class="inline-flex items-center text-[#4A80A4] hover:text-[#2a4d69] font-medium transition duration-150">
+                    <a href="https://nivaldojuniorpsi.github.io/home/blog/o-inconsciente-e-a-linguagem.html" class="inline-flex items-center text-[#4A80A4] hover:text-[#2a4d69] font-medium transition duration-150">
                         Ler Artigo Completo
                         <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
                     </a>
