--- a/sobre.html
+++ b/sobre.html
@@ -78,10 +78,10 @@
 
     <header class="fixed top-0 left-0 w-full bg-[#2a4d69] text-white shadow-lg z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between">
-            <a href="https://nivaldojuniorpsi.github.io/home/home.html" class="text-xl font-bold">Nivaldo Júnior</a>
+            <a href="https://nivaldojuniorpsi.github.io/home/index.html" class="text-xl font-bold">Nivaldo Júnior</a>
             
             <nav class="hidden md:flex space-x-4">
-                <a href="https://nivaldojuniorpsi.github.io/home/home.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-white hover:text-[#2a4d69] transition duration-150">Home</a>
+                <a href="https://nivaldojuniorpsi.github.io/home/index.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-white hover:text-[#2a4d69] transition duration-150">Home</a>
                 <a href="https://nivaldojuniorpsi.github.io/home/blog.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-white hover:text-[#2a4d69] transition duration-150">Blog</a>
                 <a href="https://nivaldojuniorpsi.github.io/home/sobre.html" class="px-3 py-2 rounded-md text-sm font-medium bg-[#4A80A4] text-white">Sobre</a>
                 <a href="#" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-white hover:text-[#2a4d69] transition duration-150">Contatos</a>
@@ -96,7 +96,7 @@
         
         <div class="hidden md:hidden" id="mobile-menu">
             <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
-                <a href="https://nivaldojuniorpsi.github.io/home/home.html" class="block px-3 py-2 rounded-md text-base font-medium text-white hover:bg-white hover:text-[#2a4d69] transition duration-150">Home</a>
+                <a href="https://nivaldojuniorpsi.github.io/home/index.html" class="block px-3 py-2 rounded-md text-base font-medium text-white hover:bg-white hover:text-[#2a4d69] transition duration-150">Home</a>
                 <a href="https://nivaldojuniorpsi.github.io/teste/blog.html" class="block px-3 py-2 rounded-md text-base font-medium text-white hover:bg-white hover:text-[#2a4d69] transition duration-150">Blog</a>
                 <a href="sobre.html" class="block px-3 py-2 rounded-md text-base font-medium bg-[#4A80A4] text-white">Sobre</a>
                 <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-white hover:bg-white hover:text-[#2a4d69] transition duration-150">Contatos</a>
@@ -106,7 +106,7 @@
 
     <div class="container">
         <div class="card">
-            <img src="nivaldo.jpg" class="foto-perfil" alt="Foto de perfil">
+            <img src="img/nivaldo.jpg" class="foto-perfil" alt="Foto de perfil">
             <h1>Nivaldo Júnior</h1>
             <h2>Psicólogo • Atendimento Online para Brasileiros na Europa</h2>
             <h3>Sobre meu trabalho</h3>
