--- a/sobre.html
+++ b/sobre.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre | Nivaldo Júnior Psicólogo</title>
+    <title>Nivaldo Júnior - Psicólogo | Sobre</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* Estilos base do corpo, ajustando o padding para o header fixo */
