--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
             <nav class="hidden md:flex space-x-4">
                 <a href="https://nivaldojuniorpsi.github.io/home/index.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-white hover:text-[#2a4d69] transition duration-150">Home</a>
                 <a href="https://nivaldojuniorpsi.github.io/home/sobre.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-white hover:text-[#2a4d69] transition duration-150">Sobre</a>
-                <a href="#" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-white hover:text-[#2a4d69] transition duration-150">Contatos</a>
+                <a href="https://nivaldojuniorpsi.github.io/home/contato.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-white hover:text-[#2a4d69] transition duration-150">Contato</a>
             </nav>
 
             <!-- Botão do Menu Hamburguer (Mobile) -->
@@ -43,7 +43,7 @@
             <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
                 <a href="https://nivaldojuniorpsi.github.io/home/index.html" class="block px-3 py-2 rounded-md text-base font-medium text-white hover:bg-white hover:text-[#2a4d69] transition duration-150">Home</a>
                 <a href="https://nivaldojuniorpsi.github.io/home/sobre.html" class="block px-3 py-2 rounded-md text-base font-medium text-white hover:bg-white hover:text-[#2a4d69] transition duration-150">Sobre</a>
-                <a href="#" class="block px-3 py-2 rounded-md text-base font-medium text-white hover:bg-white hover:text-[#2a4d69] transition duration-150">Contatos</a>
+                <a href="https://nivaldojuniorpsi.github.io/home/contato.html" class="block px-3 py-2 rounded-md text-base font-medium text-white hover:bg-white hover:text-[#2a4d69] transition duration-150">Contato</a>
             </div>
         </div>
     </header>
