--- a/contato.html
+++ b/contato.html
@@ -130,6 +130,7 @@
         
         <nav id="menuLinks" class="menu-principal">
             <a href="https://nivaldojuniorpsi.github.io/home/index.html">Home</a>
+            <a href="https://nivaldojuniorpsi.github.io/home/blog.html">Blog</a>
             <a href="https://nivaldojuniorpsi.github.io/home/sobre.html">Sobre</a>
             <a href="https://nivaldojuniorpsi.github.io/home/contato.html">Contato</a>
         </nav>
