--- a/blog.html
+++ b/blog.html
@@ -77,12 +77,12 @@
 
             <!-- Card de Artigo 2 -->
             <article class="bg-white rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden border border-gray-100">
-                <img class="w-full h-48 object-cover" src="https://placehold.co/600x400/4A80A4/ffffff?text=Desenvolvimento" alt="Imagem relacionada ao Desenvolvimento Pessoal">
+                <img class="w-full h-48 object-cover" src="home/img/nietzsche.jpeg" alt="Imagem relacionada ao Desenvolvimento Pessoal">
                 <div class="p-6">
                     <p class="text-sm text-gray-500 mb-2">15 de Outubro, 2025</p>
-                    <h3 class="text-xl font-semibold text-gray-900 mb-3">Ansiedade e o Diálogo Interno: Como a fala nos afeta</h3>
+                    <h3 class="text-xl font-semibold text-gray-900 mb-3">F. Nietzsche and his struggle against the slave morality</h3>
                     <p class="text-gray-600 line-clamp-3 mb-4">
-                        A forma como nomeamos nossos sentimentos pode mitigar ou intensificar a ansiedade. Dicas práticas baseadas na Psicolinguística para reformular pensamentos destrutivos.
+                        Romanticism elevates pain/virtue. Nietzsche rejects: you must affirm life, embrace strength, and create your own values, transcending "slave morality."
                     </p>
                     <a href="#" class="inline-flex items-center text-[#4A80A4] hover:text-[#2a4d69] font-medium transition duration-150">
                         Ler Artigo Completo
