--- a/index.html
+++ b/index.html
@@ -164,11 +164,11 @@
     
     <div class="container">
         
-        <img src="home/img/nivaldo.jpg"
+        <img src="nivaldo.jpg"
             class="hero-image"
             alt="CRP 09-016675">
 
-        <img src="home/img/logo.png" alt="Nivaldo José da Cunha Júnior" class="hero-image">
+        <img src="logo.png" alt="Nivaldo José da Cunha Júnior" class="hero-image">
 
         <h2>Bem-vindo ao meu site</h2>
         <p>
